--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "better-sqlite3": "^11.10.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "slugify": "^1.6.6",
+    "uuid": "^11.1.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
